# wikirefs

./: .gitignore  LICENSE  README  SETUP  pyproject.toml
tests/: conftest.py  ref-sample-1.html  ref-sample-2.html  test_article.py  test_citation.py  test_wikirefs.py
tests/data/: arthur-o-austin.html  sample-1.html  sample-2.html
tools/: getHTML.py
web/: webapp.py
web/templates/: base.html  page_form.html  show.html
wikirefs/: __init__.py  article.py  citation.py  statement.py
wikirefs_tools/: get_html.py  picker.py
