[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wikirefs"
version = "0.0.1"
dependencies = [
    "lxml",
    "cssselect",
    "pytest",
    "beautifulsoup4",
    "more-itertools",
    "flask",
    "flask-wtf",
    "pywikibot",
]

[project.scripts]
get-html = "wikirefs_tools.get_html:main"


[tool.setuptools]
packages = [
    "wikirefs",
    "wikirefs_tools",
    ]
